--- a/Staff Promotion Problem/promotion_api/templates/sorry.html
+++ b/Staff Promotion Problem/promotion_api/templates/sorry.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Result</title>
     <link href="/static/css/style.css" type="text/css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
