edit the html files

--- a/Staff Promotion Problem/promotion_api/templates/main.html
+++ b/Staff Promotion Problem/promotion_api/templates/main.html
@@ -12,9 +12,9 @@
 
     <div class="navbar">
       <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
-      <a href="https://github.com/geewynn/Machine-Learning-Project/tree/master/Staff%20Promotion%20Problem"><i class="fa fa-fw fa-github"></i> Github</a>
-      <a href="mailto:ekainugodwin@gmail.com"><i class="fa fa-fw fa-envelope"></i> Mail Me</a>
-      <a href="https://www.linkedin.com/in/godwin-ekainu-34a50b127/"><i class="fa fa-fw fa-globe"></i> Linkedin</a>
+      <a href="https://github.com/geewynn/Machine-Learning-Project/tree/master/Staff%20Promotion%20Problem" target="_blank"><i class="fa fa-fw fa-github"></i> Github</a>
+      <a href="mailto:ekainugodwin@gmail.com"><i class="fa fa-fw fa-envelope" target="_blank"></i> Mail Me</a>
+      <a href="https://www.linkedin.com/in/godwin-ekainu-34a50b127/" target="_blank"><i class="fa fa-fw fa-globe"></i> Linkedin</a>
     </div>
 
 
