--- a/Credit Score Model/credit_score_deployed/templates/main.html
+++ b/Credit Score Model/credit_score_deployed/templates/main.html
@@ -20,8 +20,8 @@
 
 <div class="container">
     <div class="mh">
-        <h1> Employee Promotion Model</h1>
-        <p>Built with Machine Learning, This model predicts if an employee is Eligible for Promotion or Not.</p>
+        <h1> Credit Score Model</h1>
+        <p>This model returns the probabilty of your credit risk level. Please. note that this is a practice project and the results returned might not be accurate</p>
     </div>
 {#     <form action="{{ url_for('predict')}}"method="post">#}
      <form action="/result" method="POST">
